fix(hero): remove heading text overlapping by increasing content spacing on large screens

--- a/src/assets/styles/Hero.module.css
+++ b/src/assets/styles/Hero.module.css
@@ -3,7 +3,6 @@
   flex-direction: column-reverse;
 
   margin-inline: auto;
-  padding-inline: clamp(1rem, 5vw, 6rem);
   max-width: 80ch;
 
   margin-block: var(--space-section);
@@ -59,11 +58,11 @@ img {
 /* Tablet */
 @media (min-width: 768px) {
   .hero {
+    width: 100%;
     display: flex;
-    justify-content: center;
-    flex-direction: row;
 
-    gap: var(--space-6);
+    justify-content: space-between;
+    flex-direction: row;
   }
 
   .headline,
